@@ -28,6 +28,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>24.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -43,11 +49,31 @@
                 </configuration>
             </plugin>
 
-            <!-- Plugin pour exécuter les tests avec JUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <argLine>
+                        --enable-native-access=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-exports=java.base/sun.misc=ALL-UNNAMED
+                        --add-opens=java.base/sun.misc=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>org.example.gui.Main</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.glass.utils=ALL-UNNAMED</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
+                </configuration>
             </plugin>
         </plugins>
     </build>
